--- a/app/src/main/res/layout/activity_note_take.xml
+++ b/app/src/main/res/layout/activity_note_take.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rootView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.NoteUploadActivity">
@@ -34,40 +35,51 @@
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.95" />
 
-    <ImageView
-        android:id="@+id/previous"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="@null"
-        android:src="@drawable/previous"
-        app:layout_constraintBottom_toBottomOf="@id/save"
-        app:layout_constraintStart_toStartOf="@id/startGuideline"
-        app:layout_constraintTop_toTopOf="@id/topGuideline" />
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/toolbar"
+        android:layout_width="0dp"
+        android:layout_height="?attr/actionBarSize"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:menu="@menu/note_toolbar_menu"
+        app:navigationIcon="@drawable/previous" />
 
-    <ImageView
-        android:id="@+id/save"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="@null"
-        android:src="@drawable/save"
-        app:layout_constraintEnd_toEndOf="@id/endGuideline"
-        app:layout_constraintBottom_toBottomOf="@id/previous"
-        app:layout_constraintTop_toTopOf="@id/topGuideline" />
+    <!--    <ImageView-->
+    <!--        android:id="@+id/previous"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:contentDescription="@null"-->
+    <!--        android:src="@drawable/previous"-->
+    <!--        app:layout_constraintBottom_toBottomOf="@id/save"-->
+    <!--        app:layout_constraintStart_toStartOf="@id/startGuideline"-->
+    <!--        app:layout_constraintTop_toTopOf="@id/topGuideline" />-->
+
+    <!--    <ImageView-->
+    <!--        android:id="@+id/save"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:contentDescription="@null"-->
+    <!--        android:src="@drawable/save"-->
+    <!--        app:layout_constraintBottom_toBottomOf="@id/previous"-->
+    <!--        app:layout_constraintEnd_toEndOf="@id/endGuideline"-->
+    <!--        app:layout_constraintTop_toTopOf="@id/topGuideline" />-->
+
     <EditText
         android:id="@+id/noteTitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:minHeight="32dp"
         android:layout_marginTop="56dp"
         android:background="@android:color/transparent"
         android:fontFamily="@font/regular"
         android:hint="@string/title"
         android:importantForAutofill="no"
         android:inputType="text"
+        android:minHeight="32dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
         app:layout_constraintEnd_toEndOf="@id/endGuideline"
         app:layout_constraintStart_toStartOf="@id/startGuideline"
-        app:layout_constraintTop_toBottomOf="@id/previous" />
+        app:layout_constraintTop_toBottomOf="@id/toolbar" />
 
     <EditText
         android:id="@+id/noteBody"
